--- a/style.css
+++ b/style.css
@@ -10,8 +10,16 @@ margin:0;
 padding:0;
 }
 
-.image-hover:hover{
-    opacity:1;
+.img-skill{
+    width:20vw;
+    height:20vw;
+    min-width:150px;
+    min-height:150px;
+    max-width:300px;
+    max-height:250px;
+}
+.img-coloring{
+    background-color:white;
 }
 
 .image-hover{
@@ -19,3 +27,34 @@ padding:0;
     border-radius:10px; 
     opacity:0.6;
 }
+.image-hover:hover{
+    opacity:1;
+}
+.grid-holder{
+    display:grid;
+    grid-template-columns:auto auto auto;
+    gap: 10px;;
+    max-width:1500px;
+    margin:auto;
+    padding-bottom:50px;
+    
+}
+.card-center{
+    align-items: center;
+}
+@media only screen and (max-width: 575px){
+    .test{
+        margin-left:18%;
+    }
+}
+
+@media only screen and (max-width: 766px){
+    .grid-holder{
+        display:grid;
+        grid-template-columns:auto auto ;
+        gap: 10px;;
+        
+    }
+    
+}
+
